--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <link href="/assets/static/style.css" rel="stylesheet">
   </head>
   <body class="flex h-screen w-full">
-    <main class="text-blue-500 text-xl font-bold m-auto">
-      Hello
+    <main class="text-red-500 text-xl font-bold m-auto">
+      Hello -> {{ val }}
     </main>
   </body>
 </html>
